mobile overflow resolved

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,7 @@ body, html{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    scroll-behavior: smooth;
-    
+    scroll-behavior: smooth;    
 }
 ::-webkit-scrollbar{
     background-color: #fff;
@@ -232,6 +231,10 @@ td, th{
 }
 .form-input{
     display: block;
+    box-sizing:border-box; 
+    -moz-box-sizing:border-box; 
+    -webkit-box-sizing:border-box; 
+    -ms-box-sizing:border-box; 
 }
 .example{
     font-size: 0.75rem;
@@ -244,6 +247,10 @@ td, th{
 .upload-file{
     justify-content: space-between;
     align-items: center;
+    box-sizing:border-box; 
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box; 
+    -ms-box-sizing:border-box; 
 }
 .upload-file>p{
     margin: 0;
